manifest/webserver/templates/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx-ingress
spec:
  backend:
    serviceName: nginx-service
    servicePort: 8080
